--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -29,7 +29,7 @@
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h3 class="">Hébergement du service</h3>
+                    <h3 >Hébergement du service</h3>
 
                     <p>APiLos est hébergé en France sur l’infrastructure <a href="https://scalingo.com/fr">Scalingo</a>.</p>
 
@@ -57,7 +57,7 @@
 
                     <p>Pour en savoir plus: https://beta.gouv.fr/startups/apilos.html</p>
 
-                    <h3 class="">Vocabulaire&nbsp;:</h3>
+                    <h3 >Vocabulaire&nbsp;:</h3>
 
                     <ul class="fr-mb-5w">
                         <li><q>Nous</q> se réfère à l’éditeur du service.</li>
@@ -69,9 +69,9 @@
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h3 class="">Objet</h3>
+                    <h3 >Objet</h3>
 
-                    <h4 class="">Pour les bailleurs</h4>
+                    <h4 >Pour les bailleurs</h4>
 
                     <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
@@ -80,7 +80,7 @@
                         <li>Suivre vos demandes de convention</li>
                     </ul>
 
-                    <h4 class="">Coté Instructeur</h4>
+                    <h4 >Coté Instructeur</h4>
 
                     <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
@@ -91,7 +91,7 @@
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h3 class="">Propriété intellectuelle</h3>
+                    <h3 >Propriété intellectuelle</h3>
 
                     <p>Ce site est la propriété exclusive du Ministère de la Transition écologique et de la Cohésion des territoires. Toute reproduction ou représentation totale ou partielle de ce site par quelque procédé que ce soit, sans l’autorisation expresse de son propriétaire est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 du Code de la propriété intellectuelle.</p>
 
@@ -105,25 +105,25 @@
 
                     <p>Les marques dont est titulaire le Ministère de la Transition écologique et de la Cohésion des territoires, ainsi que ses logos figurant sur le site sont des marques régulièrement déposées auprès de l’Institut national de la propriété industrielle (INPI). Toute reproduction totale ou partielle de ces marques ou de ces logos effectuées à partir des éléments du site sans l’autorisation expresse du propriétaire de ce site est prohibée au sens des articles L. 713-2 et suivants du Code de la propriété intellectuelle. Tout contrefacteur s’expose aux sanctions prévues aux articles L. 716-1 et suivants du code de la propriété intellectuelle.</p>
 
-                    <h4 class="">Code source</h4>
+                    <h4 >Code source</h4>
 
                     <p>Le code source de la plateforme est libre et peut donc être vérifié et amélioré par chacun dans les conditions précisées par la <a href="https://spdx.org/licenses/MIT.html">licence MIT</a>. le code source est disponible sur Github à l’adresse <a href="https://github.com/MTES-MCT/apilos">github.com/MTES-MCT/apilos</a>.</p>
 
-                    <h4 class="">Données administratives publiques relatives</h4>
+                    <h4 >Données administratives publiques relatives</h4>
 
                     <p>Les informations publiques délivrées par le service le sont sous Licence Ouverte V 2.0. Vous êtes donc libres de réutiliser ces informations sous réserve de mentionner la paternité de l’information et la date de dernière mise à jour de l’information utilisée. Par exemple, sur la forme <q>Le Ministère de la Transition écologique et de la Cohésion des territoires – Téléchargées sur apilos.beta.gouv.fr mise à jour du &lt;date&gt;</q>.</p>
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h3 class="">Vie privée</h3>
+                    <h3 >Vie privée</h3>
 
-                    <h4 class="">Données à caractère personnel</h4>
+                    <h4 >Données à caractère personnel</h4>
 
                     <p>Nous nous engageons à ce que la collecte et le traitement de vos données, effectués à partir du site soient conformes au règlement général sur la protection des données du 27 avril 2016, applicable depuis le 25 mai 2018, et à la loi Informatique et Libertés dans sa dernière version modifiée du 20 juin 2018.</p>
 
                     <p>Ces dispositions fixent des règles strictes de confidentialité et de sécurité à toute organisation, publique et privée, dans le cadre du traitement des données à caractère personnel de leurs utilisateurs, et ce afin de protéger la vie privée de ceux-ci.</p>
 
-                    <h4 class="">Responsable du traitement</h4>
+                    <h4 >Responsable du traitement</h4>
 
                     <p>Le responsable du traitement de vos données à caractère personnel est&nbsp;:</p>
 
@@ -137,7 +137,7 @@
                         </address>
                     </blockquote>
 
-                    <h4 class="">Traitement des données et utilisation</h4>
+                    <h4 >Traitement des données et utilisation</h4>
 
                     <p>Nous ne pouvons utiliser vos données à caractère personnel qu’à des fins à la fois légitimes et nécessaires. Cela signifie concrètement que nous traitons vos données à caractère personnel pour les finalités suivantes&nbsp;:</p>
 
@@ -155,7 +155,7 @@
                         <li>Adresse IP (collectée automatiquement lors de la navigation et stockée temporairement dans les journaux d’accès)</li>
                     </ul>
 
-                    <h4 class="">Vos droits</h4>
+                    <h4 >Vos droits</h4>
 
                     <p>Nous nous engageons à prendre les mesures techniques et organisationnelles appropriées afin de garantir la sécurité du traitement des données à caractère personnel de chacun.</p>
 
@@ -194,7 +194,7 @@
 
                 <p>Les modalités de réclamation sont précisées sur le site de la CNIL&nbsp;: <a href="https://www.cnil.fr">www.cnil.fr</a>.</p>
 
-                <h4 class="">Procédure en cas de violations de données à caractère personnel</h4>
+                <h4 >Procédure en cas de violations de données à caractère personnel</h4>
 
                 <p>En cas de destruction, de perte, d’altération, de divulgation non autorisée de données à caractère personnel transmises, conservées ou traitées d’une autre manière, ou d’accès non autorisé à de telles données, de manière accidentelle ou illicite, susceptible d’engendrer un risque élevé pour les droits et libertés de l’utilisateur, nous vous en informerons des faits et des mesures prises, dans les meilleurs délais.</p>
 
@@ -240,7 +240,7 @@
                 </div>
 
 
-                <h4 class="">Cookies</h4>
+                <h4 >Cookies</h4>
 
                 <p>Nous déposons des cookies de mesure d’audience (nombre de visites, pages consultées), respectant les conditions d’exemption du consentement de l’internaute définies par la recommandation <q>Cookies</q> de la <a href="https://www.cnil.fr/">Commission nationale informatique et libertés (CNIL)</a>. Cela signifie, notamment, que ces cookies ne servent qu’à la production de statistiques anonymes et ne permettent pas de suivre votre navigation sur d’autres sites.</p>
 
@@ -250,13 +250,13 @@
 
                 <hr class="fr-col-12 fr-my-3w">
 
-                <h3 class="">Évolution du service</h3>
+                <h3 >Évolution du service</h3>
 
                 <p>Nous pouvons faire évoluer APiLos sans information préalable ou préavis. Nous ajoutons régulièrement des données, retravaillons l’interface et modifions les formulations sur la base de vos retours et des évolutions réglementaires et législatives.</p>
 
                 <hr class="fr-col-12 fr-my-3w">
 
-                <h3 class="">Disponibilité du service</h3>
+                <h3 >Disponibilité du service</h3>
 
                 <p>Nous pouvons suspendre l’accès à APiLos sans information préalable ni préavis, notamment pour des raisons de maintenance. Nous mettons l’application à jour régulièrement. L’indisponibilité ne dépasse généralement pas une dizaine de secondes.</p>
 
@@ -267,7 +267,7 @@
                 <hr class="fr-col-12 fr-my-3w">
 
 
-                <h3 class="">Évolution des conditions d’utilisation</h3>
+                <h3 >Évolution des conditions d’utilisation</h3>
 
                 <p>Les termes des présentes conditions d’utilisation peuvent être modifiés ou complétés à tout moment, sans préavis, en fonction des modifications apportées au service, de l’évolution de la législation ou pour tout autre motif jugé nécessaire. Ces modifications et mises à jour s’imposent à l’utilisateur qui doit, en conséquence, se référer régulièrement à cette rubrique pour vérifier les conditions générales en vigueur.</p>
 
