--- a/templates/operations/common/form_header.html
+++ b/templates/operations/common/form_header.html
@@ -1,12 +1,5 @@
 {% load custom_filters %}
-
-
-
-
-
-
-
-<div class='background-contrast-grey950 apilos-sticky apilos-sticky-top fr-pt-2w'>
+<div class='background-contrast-grey950 apilos-sticky fr-pt-2w'>
     <div class="fr-container">
         <div class="fr-col-12 fr-pb-2w">
             <div class="fr-grid-row fr-grid-row--gutters">
