--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -4,16 +4,16 @@
     <div class="block--row-strech fr-my-2w">
         <div class="block--row-strech-1 fr-my-2w fr-mr-6w">
             <p class="fr-alert__title">
-                Repasser cette convention en "A instruire"
+                Repasser {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} au statut "A instruire"
             </p>
             <p>
-                Cette convention est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà signée{% endif %}. Cependant,
+                {% if convention.is_avenant %}Cet avenant{% else %}Cette convention{% endif %} est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà {% if convention.is_avenant %}signé{% else %}signée{% endif %}{% endif %}. Cependant,
                 s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "A instruire".
                 en cliquant sur le bouton ci-dessous
             </p>
             <p>
                 <span class="fr-icon-warning-line" aria-hidden="true"></span>
-                Une fois la convention en statut "A instruire", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
+                Une fois {% if convention.is_avenant %}l‘avenant{% else %}la convention{% endif %} en statut "A instruire", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
                 Si l'intervention du bailleur est nécessaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
             </p>
         </div>
