--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -20,7 +20,7 @@
                             </div>
                             <div class="fr-col-12 fr-col-md-6">
                                 <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
-                                    Valider {% if convention.is_avenant %}l'avenant de {% endif %}la convention
+                                    Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
                                 </button>
                             </div>
                         </div>
