--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -7,7 +7,7 @@
                 Soumettre au service instructeur
             </p>
             <p>
-                Votre projet {% if convention.is_avenant %}d'avenant à la {% else %}de {% endif %}convention est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
+                Votre projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
             </p>
             <p>
                 Si vous avez encore des modifications à apporter au projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, vous pouvez y revenir plus tard.
