--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -34,30 +34,32 @@
                 {% if convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
                         {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' %}
-                        <hr class="fr-mt-3w">
-                    {% else %}
-                        {% include "conventions/avenant/bailleur_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
                     {% endif %}
                     {% if 'logements' in avenant_list %}
                         {% include "conventions/recapitulatif/logements.html" with target_url='conventions:avenant_logements' %}
                         {% include "conventions/recapitulatif/annexes.html" with target_url='conventions:avenant_annexes' %}
-                        <hr class="fr-mt-3w">
-                    {% else %}
-                        {% include "conventions/avenant/logements_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
                     {% endif %}
                     {% if 'duree' in avenant_list %}
                         {% include "conventions/recapitulatif/financement.html" with target_url='conventions:avenant_financement' %}
-                        <hr class="fr-mt-3w">
-                    {% else %}
-                        {% include "conventions/avenant/financement_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
                     {% endif %}
                     {% if 'commentaires' in avenant_list %}
                         {% include "conventions/recapitulatif/comments.html" with target_url='conventions:avenant_comments' %}
-                        <hr class="fr-mt-3w">
-                    {% else %}
+                    {% endif %}
+                    <hr class="fr-mt-3w">
+
+                    {% if 'bailleur' not in avenant_list %}
+                        {% include "conventions/avenant/bailleur_update_start.html" with avenant_uuid=convention.uuid %}
+                        <hr>
+                    {% endif %}
+                    {% if 'logements' not in avenant_list %}
+                        {% include "conventions/avenant/logements_update_start.html" with avenant_uuid=convention.uuid %}
+                        <hr>
+                    {% endif %}
+                    {% if 'duree' not in avenant_list %}
+                        {% include "conventions/avenant/financement_update_start.html" with avenant_uuid=convention.uuid %}
+                        <hr>
+                    {% endif %}
+                    {% if 'commentaires' not in avenant_list %}
                         {% include "conventions/avenant/comments_update_start.html" with avenant_uuid=convention.uuid %}
                         <hr>
                     {% endif %}
