--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -75,8 +75,13 @@
                 </div>
             {% else %}
                 <div role="alert" class="fr-alert fr-alert--success">
-                    <p class="">Ici, la convention pourra être téléversée par l'administration en charge dès qu'elle sera signée.
-                    </p>
+                    {% if convention.is_avenant %}
+                        <p >Ici, l'avenant pourra être téléversé par l'administration en charge dès qu'il sera signé.
+                        </p>
+                    {% else %}
+                        <p >Ici, la convention pourra être téléversée par l'administration en charge dès qu'elle sera signée.
+                        </p>
+                    {% endif %}
                     <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
                         Consulter le récapitulatif
                     </a>
