--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -4,34 +4,52 @@
     <div class="fr-col-md-12 fr-py-5w">
         <p class="fr-alert__title">Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}</p>
         <div role="alert">
-            {% with editable_validation=convention.type1and2_configuration_not_needed %}
-                {% if editable_validation %}
-                    <p class="fr-mb-3w">Vous pouvez associer un numéro {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} et valider {% if convention.is_avenant %}celui-ci{% else %}celle-ci{% endif %}. {% if convention.is_avenant %}Il{% else %}Elle{% endif %} sera automatiquement transmise au bailleur par email pour signature.</p>
-                {% else %}
-                    <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
-                        <strong>Convention de type I & II ci-dessus.</strong></p>
-                {% endif %}
+            {% if convention.is_avenant %}
                 <div>
+                    <p class="fr-mb-3w">L'avenant aura le numero {{conventionNumberForm.convention_numero.value}}.</p>
                     <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
                         {% csrf_token %}
-                        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
-                            <div class="fr-col-12 fr-col-md-6">
-                                {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
-                            </div>
-                            <div class="fr-col-12 fr-col-md-6">
-                                <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
-                                    Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
-                                </button>
-                            </div>
-                        </div>
+                        <input type="hidden"
+                            id="{{conventionNumberForm.convention_numero.id_for_label}}"
+                            name="{{conventionNumberForm.convention_numero.html_name}}"
+                            value="{{conventionNumberForm.convention_numero.value}}">
+                        <button class="fr-btn fr-btn--secondary">
+                            Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
+                        </button>
 
-                        <div class="fr-col-12">
-                            <em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
-                            </em>
-                        </div>
                     </form>
                 </div>
-            {% endwith %}
+
+            {% else %}
+                {% with editable_validation=convention.type1and2_configuration_not_needed %}
+                    {% if editable_validation %}
+                        <p class="fr-mb-3w">Vous pouvez associer un numéro de convention et valider celle-ci. Elle sera automatiquement transmise au bailleur par email pour signature.</p>
+                    {% else %}
+                        <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
+                            <strong>Convention de type I & II ci-dessus.</strong></p>
+                    {% endif %}
+                    <div>
+                        <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
+                            {% csrf_token %}
+                            <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
+                                <div class="fr-col-12 fr-col-md-6">
+                                    {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
+                                </div>
+                                <div class="fr-col-12 fr-col-md-6">
+                                    <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
+                                        Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="fr-col-12">
+                                <em>Le préfixe du numéro de convention est modifiable dans <a class="fr-link fr-mb-1w" href="{% url 'settings:administrations' %}" data-turbo="false">les paramètres de votre administration</a>
+                                </em>
+                            </div>
+                        </form>
+                    </div>
+                {% endwith %}
+            {% endif %}
         </div>
     </div>
     <hr>
@@ -44,4 +62,5 @@
             <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
         </div>
     </div>
+    <hr>
 {% endif %}
