--- a/templates/conventions/recapitulatif/alert_convention.html
+++ b/templates/conventions/recapitulatif/alert_convention.html
@@ -1,4 +1,4 @@
-{% if convention.is_project %}
+{% if convention.statut == CONVENTION_STATUT.PROJET %}
     <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12">
             <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
