--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -47,21 +47,24 @@
                     {% endif %}
                     <hr class="fr-mt-3w">
 
-                    {% if 'bailleur' not in avenant_list %}
-                        {% include "conventions/avenant/bailleur_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
-                    {% endif %}
-                    {% if 'logements' not in avenant_list %}
-                        {% include "conventions/avenant/logements_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
-                    {% endif %}
-                    {% if 'duree' not in avenant_list %}
-                        {% include "conventions/avenant/financement_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
-                    {% endif %}
-                    {% if 'commentaires' not in avenant_list %}
-                        {% include "conventions/avenant/comments_update_start.html" with avenant_uuid=convention.uuid %}
-                        <hr>
+                    {% if convention|display_convention_form_progressbar %}
+
+                        {% if 'bailleur' not in avenant_list %}
+                            {% include "conventions/avenant/bailleur_update_start.html" with avenant_uuid=convention.uuid %}
+                            <hr>
+                        {% endif %}
+                        {% if 'logements' not in avenant_list %}
+                            {% include "conventions/avenant/logements_update_start.html" with avenant_uuid=convention.uuid %}
+                            <hr>
+                        {% endif %}
+                        {% if 'duree' not in avenant_list %}
+                            {% include "conventions/avenant/financement_update_start.html" with avenant_uuid=convention.uuid %}
+                            <hr>
+                        {% endif %}
+                        {% if 'commentaires' not in avenant_list %}
+                            {% include "conventions/avenant/comments_update_start.html" with avenant_uuid=convention.uuid %}
+                            <hr>
+                        {% endif %}
                     {% endif %}
                 {% else %}
                     {% include "conventions/recapitulatif/bailleur.html"  with target_url='conventions:bailleur'%}
