--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -168,7 +168,7 @@
                                 accept="application/pdf">
                             <div class="block--row-strech">
                                 <div>
-                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-icon-upload-line fr-btn--icon-left fr-btn fr-my-1w fr-btn--secondary fr-my-1w" type="button">
                                         Téléverser la convention signée
                                     </button>
                                     {% for error in upform.file.errors %}
